--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,7 +3,7 @@ name: CI/CD
 on:
   push:
     branches:
-      # - master
+      - master
       - dev
   workflow_dispatch:
 
@@ -12,7 +12,7 @@ concurrency: ${{ github.ref }}
 env:
   ENV_KEY: env-vars
   ENV_FILE: env.yaml
-  GCP_SA: bivuanem@voltaic-country-280607.iam.gserviceaccount.com
+  GCP_SA: etl-181@real-data-now.iam.gserviceaccount.com
 
 jobs:
   set-env:
@@ -22,16 +22,15 @@ jobs:
     steps:
       - if: github.ref_name == 'dev'
         run: |
-          echo "FUNCTION_NAME=vuanem-coffeehr-dev" >> $GITHUB_ENV
-          echo "PUBLIC_URL=https://us-central1-voltaic-country-280607.cloudfunctions.net/vuanem-coffeehr-dev" >> $GITHUB_ENV
+          echo "FUNCTION_NAME=real-home-mlsgrid-dev" >> $GITHUB_ENV
+          echo "PUBLIC_URL=https://us-central1-real-data-now.cloudfunctions.net/real-home-mlsgrid-dev" >> $GITHUB_ENV
 
       - if: github.ref_name == 'master'
         run: |
-          echo "FUNCTION_NAME=vuanem-coffeehr" >> $GITHUB_ENV
-          echo "PUBLIC_URL=https://us-central1-voltaic-country-280607.cloudfunctions.net/vuanem-coffeehr" >> $GITHUB_ENV
+          echo "FUNCTION_NAME=real-home-mlsgrid" >> $GITHUB_ENV
+          echo "PUBLIC_URL=https://us-central1-real-data-now.cloudfunctions.net/real-home-mlsgrid" >> $GITHUB_ENV
 
       - id: set-fn-name
-        name: Set Function Name
         run: echo "::set-output name=fn-name::${{ env.FUNCTION_NAME}}"
 
       - run: |
