--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,7 +34,7 @@ jobs:
         run: echo "::set-output name=fn-name::${{ env.FUNCTION_NAME}}"
 
       - run: |
-          echo "COFFEEHR_TOKEN: ${{ secrets.COFFEEHR_TOKEN }}" >> ${{ env.ENV_FILE }}
+          echo "MLSGRID_TOKEN: ${{ secrets.MLSGRID_TOKEN }}" >> ${{ env.ENV_FILE }}
 
           echo "GCP_SA: ${{ env.GCP_SA }}" >> ${{ env.ENV_FILE }}
           echo "PUBLIC_URL: ${{ env.PUBLIC_URL }}" >> ${{ env.ENV_FILE }}
