--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ compose = "^1.2.8"
 google-auth = "^2.6.6"
 pytz = "^2022.1"
 google-cloud-tasks = "^2.9.0"
+Flask = "^2.2.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
