--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ google-auth = "^2.6.6"
 pytz = "^2022.1"
 google-cloud-tasks = "^2.9.0"
 Flask = "^2.2.2"
+PyPika = "^0.48.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
