--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ compose = "^1.2.8"
 google-auth = "^2.6.6"
 Flask = "^2.2.2"
 Jinja2 = "^3.1.2"
+Flask-Cors = "^3.0.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
