--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==2.1.0; python_full_version >= "3.6.0" and python_version >= 
 click==8.1.3; python_version >= "3.7"
 colorama==0.4.5; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0"
 compose==1.4.8
+flask-cors==3.0.10
 flask==2.2.2; python_version >= "3.7"
 google-api-core==2.8.2; python_version >= "3.6" and python_version < "3.11"
 google-auth==2.9.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
