--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "json2csv": "^5.0.7",
         "knex": "^2.2.0",
         "lodash": "^4.17.21",
+        "nunjucks": "^3.2.3",
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
@@ -57,6 +58,7 @@
         "@types/lodash": "^4.14.183",
         "@types/multer": "^1.4.7",
         "@types/node": "^16.11.49",
+        "@types/nunjucks": "^3.2.1",
         "@types/passport-jwt": "^3.0.6",
         "@types/passport-local": "^1.0.34",
         "@types/supertest": "^2.0.12",
@@ -82,6 +84,7 @@
             "json",
             "ts"
         ],
+        "setupFiles": ["dotenv/config"],
         "rootDir": "src",
         "testRegex": ".*\\.test\\.ts$",
         "transform": {
