--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "start:prod": "node dist/main"
     },
     "dependencies": {
+        "-": "^0.0.1",
         "@faker-js/faker": "^7.4.0",
         "@google-cloud/automl": "^3.0.0",
         "@google-cloud/bigquery": "^6.0.2",
@@ -26,7 +27,9 @@
         "@nestjs/platform-express": "^9.0.11",
         "@nestjs/schedule": "^2.1.0",
         "@nestjs/swagger": "^6.0.5",
+        "bcrypt": "^5.0.1",
         "cookie-parser": "^1.4.6",
+        "D": "^1.0.0",
         "dayjs": "^1.11.5",
         "faker-js": "^1.0.0",
         "googleapis": "^105.0.0",
@@ -50,6 +53,7 @@
         "@nestjs/cli": "^9.0.0",
         "@nestjs/schematics": "^9.0.1",
         "@nestjs/testing": "^9.0.11",
+        "@types/bcrypt": "^5.0.0",
         "@types/cookie-parser": "^1.4.3",
         "@types/cron": "^2.0.0",
         "@types/express": "^4.17.13",
@@ -84,7 +88,9 @@
             "json",
             "ts"
         ],
-        "setupFiles": ["dotenv/config"],
+        "setupFiles": [
+            "dotenv/config"
+        ],
         "rootDir": "src",
         "testRegex": ".*\\.test\\.ts$",
         "transform": {
