--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@google-cloud/bigquery": "^6.0.2",
+        "@google-cloud/logging-bunyan": "^4.1.2",
         "@mikro-orm/core": "^5.3.1",
         "@mikro-orm/nestjs": "^5.1.1",
         "@mikro-orm/postgresql": "^5.3.1",
@@ -23,6 +24,7 @@
         "@nestjs/platform-express": "^9.0.11",
         "@nestjs/swagger": "^6.0.5",
         "bcrypt": "^5.0.1",
+        "bunyan": "^1.8.15",
         "cookie-parser": "^1.4.6",
         "dayjs": "^1.11.5",
         "lodash": "^4.17.21",
@@ -44,6 +46,7 @@
         "@nestjs/schematics": "^9.0.1",
         "@nestjs/testing": "^9.0.11",
         "@types/bcrypt": "^5.0.0",
+        "@types/bunyan": "^1.8.8",
         "@types/cookie-parser": "^1.4.3",
         "@types/express": "^4.17.13",
         "@types/jest": "28.1.7",
